# os-sanitizer

./: .gitignore  Cargo.toml  README.md  aya.patch  os-sanitizer.service  toctou-2005.diff
.vim/: coc-settings.json
evaluation/: README.md  readme.md  setup_ae.sh
evaluation/browserbench/: eval_puppet_speedometer3.sh  package.json  speedometer3_run.js
evaluation/data/: data_SPEC.json  data_microbench.txt  data_speedometer.json
evaluation/filtering/: filter_SPEC.py  filter_SPEC_and_browser.py  filter_browserbench.py  filter_microbench_data.sh
evaluation/microbenchmark/: eval_microbench.sh
evaluation/output/: output_SPEC_and_browser_print.py  output_microbenchmark_print.py
evaluation/spec/: eval_SPEC_intspeed_00.sh  eval_SPEC_intspeed_01.sh  eval_SPEC_intspeed_02.sh  eval_SPEC_intspeed_03.sh  eval_SPEC_intspeed_04.sh  eval_SPEC_intspeed_05.sh  eval_SPEC_intspeed_06.sh  eval_SPEC_intspeed_07.sh  eval_SPEC_intspeed_08.sh  eval_SPEC_intspeed_09.sh  eval_SPEC_intspeed_10.sh  eval_SPEC_intspeed_11.sh  eval_SPEC_intspeed_12.sh  eval_SPEC_intspeed_13.sh  eval_SPEC_intspeed_14.sh  eval_SPEC_intspeed_15.sh  eval_SPEC_intspeed_16.sh  eval_SPEC_intspeed_17.sh
examples/: .gitignore  01_access.c  02_gets.c  02_gets_input_file.txt  03_rwx_mem.c  04_memcpy.c  04_strcpy.c  04_strncpy.c  05_security_file_open.c  06_sprintf.c  07_snprintf.c  08_printf_mutability.c  09_system_mutability.c  10_system_abs.c  11_filep_unlocked.c  11_filep_unlocked_demo_file.txt  12_fixed_mmap.c  13_interceptable_path.c  Makefile  common.c  common.h  readme.md  sensitive_information.txt
examples/dir1/dir2/: sensitive_information.txt
os-sanitizer/: Cargo.toml  build.rs
os-sanitizer-common/: Cargo.toml
os-sanitizer-common/src/: lib.rs
os-sanitizer-ebpf/: Cargo.toml  rust-toolchain.toml
os-sanitizer-ebpf/.cargo/: config.toml
os-sanitizer-ebpf/src/: binding.rs  do_faccessat.rs  do_statx.rs  filep_unlocked.rs  fixed_mmap.rs  leaky_vessel.rs  main.rs  memcpy.rs  open_permissions.rs  printf_mutability.rs  rwx_mem.rs  security_file_open.rs  snprintf.rs  sprintf.rs  statistics.rs  strcpy.rs  strlen.rs  strncpy.rs  sys_openat2.rs  system_absolute.rs  system_mutability.rs  toctou_2005.rs  vfs_fstatat.rs
os-sanitizer-symbolizer/: Cargo.toml
os-sanitizer-symbolizer/src/: main.rs
os-sanitizer/src/: file_perms.rs  main.rs  resolver.rs
xtask/src/: build_ebpf.rs  main.rs  run.rs
