[package]
name = "os-sanitizer-common"
version = "0.1.0"
edition = "2021"

[features]
default = []
user = ["aya"]

[dependencies]
aya = { git = "https://github.com/aya-rs/aya.git", optional = true }
aya-ebpf-cty = { git = "https://github.com/aya-rs/aya.git" }
enum-iterator = "1.4.1"

[lib]
path = "src/lib.rs"
