[package]
name = "os-sanitizer-ebpf"
version = "0.1.0"
edition = "2021"

[features]
anon-struct = []

[dependencies]
aya-bpf = { path = "../../aya/bpf/aya-bpf" }
aya-bpf-macros = { path = "../../aya/aya-bpf-macros" }
aya-log-ebpf = { path = "../../aya/bpf/aya-log-ebpf" }
os-sanitizer-common = { path = "../os-sanitizer-common" }
paste = "1.0"

[[bin]]
name = "os-sanitizer"
path = "src/main.rs"

[profile.dev]
opt-level = 3
debug = true
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
opt-level = 3
debug = true
lto = true
panic = "abort"
codegen-units = 1

[workspace]
members = []
