[package]
name = "os-sanitizer-symbolizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
regex = "1.9.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.30.0", features = ["macros", "rt", "rt-multi-thread", "fs", "io-std", "io-util", "process"] }
