[package]
name = "os-sanitizer"
description = "A full-system sanitizer for detecting runtime vulnerabilities system-wide."
version = "0.1.0"
edition.workspace = true
publish = false

[build-dependencies]
anyhow = "1"
aya-build = { git = "https://github.com/aya-rs/aya.git" }

[dependencies]
aya = { git = "https://github.com/aya-rs/aya.git" }
aya-log = { git = "https://github.com/aya-rs/aya.git" }
os-sanitizer-common = { path = "../os-sanitizer-common", features = ["user"] }

anyhow = "1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
cpp_demangle = "0.4.3"
either = "1.9"
env_logger = "0.11"
libc = "0.2"
log = "0.4"
once_cell = "1.18.0"
thiserror = "2.0"
tokio = { version = "1.47", features = ["macros", "rt", "rt-multi-thread", "fs", "net", "process", "signal", "sync", "time"] }
users = "0.11.0"

[[bin]]
name = "os-sanitizer"
path = "src/main.rs"
